--- a/api/package.json
+++ b/api/package.json
@@ -20,11 +20,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "md5": "^2.2.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
+    "@types/md5": "^2.2.0",
     "@types/mysql": "^2.15.15",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.52",
